Edited analyzer and receiver files
